fix z-index

--- a/header.css
+++ b/header.css
@@ -3,6 +3,7 @@ header {
 	top: 0;
     width: 100%;
 	background: #fff;
+	z-index: 1;
 }
 
 header .top {
