--- a/main.css
+++ b/main.css
@@ -25,10 +25,9 @@ body {
 main {
 	position: relative;
 	display: block;
-	margin: 0 auto;
+	margin: 121px auto 0 auto;
 	max-width: 1280px;
 	min-height: calc(100vh - 121px);
-	z-index: -1;
 	overflow-x: hidden;
 }
 
